Added title and logo and theres an easter egg(right side of keyboard?)

--- a/Adventure Game/Adventure Game.csproj
+++ b/Adventure Game/Adventure Game.csproj
@@ -219,5 +219,8 @@
   <ItemGroup>
     <None Include="Resources\adventure game scene 0.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Map-Location-256.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
