--- a/Adventure Game/Adventure Game.csproj
+++ b/Adventure Game/Adventure Game.csproj
@@ -222,5 +222,14 @@
   <ItemGroup>
     <None Include="Resources\Map-Location-256.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Adventure Game BackGround.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Adventure Game BackGround1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Adventure Game BackGround2.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
